--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="btn-group" data-segmen="search">
             <button
               class="btn-segment selected"
-              daata-ripple
+              data-ripple
               data-segment-btn
               data-segment-value="photos"
             >
@@ -137,7 +137,7 @@
 
             <button
               class="btn-segment"
-              daata-ripple
+              data-ripple
               data-segment-btn
               data-segment-value="videos"
             >
