search & search history functionality

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
 
         <div class="search-view-content">
-          <div class="btn-group" data-segmen="search">
+          <div class="btn-group" data-segment="search">
             <button
               class="btn-segment selected"
               data-ripple
@@ -152,52 +152,7 @@
 
           <div class="divider"></div>
 
-          <div class="list" data-search-list>
-            <button class="list-item" data-ripple>
-              <span
-                class="material-symbols-outlined leading-icon"
-                aria-hidden="true"
-              >
-                history
-              </span>
-              <span class="body-large text">Nature</span>
-
-              <div class="state-layer"></div>
-            </button>
-            <button class="list-item" data-ripple>
-              <span
-                class="material-symbols-outlined leading-icon"
-                aria-hidden="true"
-              >
-                history
-              </span>
-              <span class="body-large text">Tree</span>
-
-              <div class="state-layer"></div>
-            </button>
-            <button class="list-item" data-ripple>
-              <span
-                class="material-symbols-outlined leading-icon"
-                aria-hidden="true"
-              >
-                history
-              </span>
-              <span class="body-large text">Man portrait</span>
-
-              <div class="state-layer"></div>
-            </button>
-            <button class="list-item" data-ripple>
-              <span
-                class="material-symbols-outlined leading-icon"
-                aria-hidden="true"
-              >
-                history
-              </span>
-              <span class="body-large text">Mountain</span>
-
-              <div class="state-layer"></div>
-            </button>
-          </div>
+          <div class="list" data-search-list></div>
         </div>
       </div>
 
